fixed the gap betwn the row1 cards

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ body {
 .temp_details_row1 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 15px;
+    gap: 8px;
     padding: 15px;
 }
 
@@ -149,7 +149,7 @@ body {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     gap: 15px;
-    margin: 10px 010px;
+    margin: 10px 10px;
 }
 
 .row2_cards {
@@ -306,7 +306,7 @@ body {
 
     .row1_cards {
         font-size: 13px;
-        padding: 8px;
+        padding: 6px;
     }
 
     .temp_details_row2 {
